<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bluebackgroud"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hfad.views.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50dp"
                android:textStyle="bold"
                android:text="3606 Electronics"
                />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="centerInside"
                android:src="@drawable/rogstrix"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASUS ROG Strix G15 Gaming Laptop"
                android:textSize="20dp" />


            <RadioGroup
                android:id="@+id/RogGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option1"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option2"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option3"
                    />

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rogButton"
                android:text="@string/Cart"
                android:onClick="onClickAddRog"
                />


            <ImageButton
                android:id="@+id/hp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/hppavillion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HP Pavilion Gaming 15.6-Inch Micro-EDGE Laptop"
                android:textSize="20dp" />


            <RadioGroup
                android:id="@+id/hpGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option4"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option5"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option6"
                    />

            </RadioGroup>

            <Button
                android:id="@+id/hpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cart"
                android:onClick="onClickAddHp"
                />

            <ImageButton
                android:id="@+id/acer"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/acernitro" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Acer Nitro 5"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/acerGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option7"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option8"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option9"
                    />

            </RadioGroup>


            <Button
                android:id="@+id/acerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cart"
                android:onClick="onClickAddAcer"
                />

            <ImageButton
                android:id="@+id/razer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/razerblade" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Razer Blade 15"
                android:textSize="20dp" />


            <RadioGroup
                android:id="@+id/razerGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option10"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option11"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/option12"
                    />

            </RadioGroup>

            <Button
                android:id="@+id/razerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cart"
                android:onClick="onClickAddRazer"
                />

            <Button
                android:id="@+id/completeOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete Order"
                android:onClick="changeConstraint"
                />

        </LinearLayout>

</ScrollView>

</FrameLayout>